# sift-aid

./: .gitignore  AID-train-model.py  CMakeLists.txt  README.md  acc_test_library.py  libDA.cpp  libLocalDesc.py  library.py  models.py  requirements.txt
py-tools/: gen-ICIP19-HistoThresholds.py  gen-ICIP19-TeaserImages.py  launch-ICIP19-test.py  tempCodeRunnerFile.py
